--- a/src/components/ScreenHome/index.css
+++ b/src/components/ScreenHome/index.css
@@ -7,7 +7,9 @@ input{
     margin:20px;
 }
 input[type='file'] {
+    width: 200px;
     display: none
+    
   }
   
   .input-wrapper label {
@@ -16,7 +18,7 @@ input[type='file'] {
     border-radius: 5px;
     color: #fff;
     cursor: pointer;
-    padding: 15px 35px;
+    padding: 15px 50px;
   }
   
   .input-wrapper label:hover {
